mule-user-guide/v/3.8/marketo-connector.adoc
=  Marketo连接器
:keywords: marketo connector, user guide
：imagesdir：./_images


[[intro]]

*Anypoint Connector for Marketo*是一个闭源连接器，它在Mule和Marketo REST API之间提供连接，实现所有受支持的v1.0 Marketo API端点，包括强大的 link:/anypoint-studio/v/6/datasense[Datasense]功能。

Marketo连接器是一个使用MuleSoft Anypoint Connector DevKit版本3.8.2开发的包装连接器。

*Release Notes:* link:/release-notes/marketo-connector-release-notes[Marketo连接器发行说明]

MuleSoft在 link:/mule-user-guide/v/3.8/anypoint-connectors#connector-categories[_选择_]支持策略下维护此连接器。

[[prerequisites]]
== 先决条件

本文档假定您熟悉Marketo API。

要使用此连接器，您需要：

具有REST支持的*  MarketoDB实例
* 一组有效的凭证，包括所需的Marketo端点，指向您的实例。有关更多信息，请查看 link:http://developers.marketo.com/documentation/getting-started/[这个]
*  MuleSoft Enterprise许可证

=== 硬件和软件要求

有关硬件和软件要求，请访问 link:https://www.mulesoft.com/lp/dl/mule-esb-enterprise[这一页]。


[[dependencies]]
=== 兼容性

Marketo连接器需要以下内容：

|===
|应用/服务|版本
| Anypoint Studio | 5.4.3
| Mule运行时| EE 3.7.0及以上版本
| Java | JDK 7及更高版本
|===

[[install]]
== 安装

要安装Marketo连接器：

. 打开Anypoint Studio并获得*Help*> *Install New Software*
* 选择`Anypoint Connectors Update Site`或`http://repository.mulesoft.org/connectors/releases/3.5.0`。
. 找到*Marketo*连接器。
. 点击*Next*并接受许可协议。
. 提示时重新启动Studio。

有关如何安装连接器 link:/mule-user-guide/v/3.8/installing-connectors[点击这里]的更多信息。

安装连接器后，您的工作室调色板应包含以下内容。此时过滤调色板以仅显示与Marketo连接器相关的消息处理器会很有用。

[[older-version]]
=== 从旧版本升级

* 卸载以前的Marketo连接器。
* 从更新站点安装最新版本的Marketo Connector（通过Studio的*Help*菜单中的*Install New Software*）。
* 确保Maven依赖关系已从*Marketo[v1.2.5]*正确更新为*Marketo[v2.0.0]*。
* 更新使用*Phased Out*或*Deprecated operations*的流程。
** 请记住`marketo:config` *NOT*已经支持*SOAP*字段。现在您只有*ClientId, Client Secret and Rest Endpoint url*。


== 配置Marketo连接器全局元素

要设置全局配置：

. 转到*Global Element*标签并点击*Create*按钮
. 在过滤器文本框内输入"Marketo"，然后从*Connector Configuration*目录中选择*Marketo: Configuration*。
. 当您选择您选择的全局元素时，您将看到要输入的全局元素属性。
..  **Client Id**字段是指您的启动点ID。
..  **Client Secret**字段应包含您的LaunchPoint的相应秘密。
..  **Rest Endpoint Url**字段应该包含您的REST WebService的网址。

以下屏幕截图显示了有关Connection字段值的Spring属性占位符的Marketo配置（有关更多信息，请参阅 link:/mule-user-guide/v/3.8/configuring-properties[配置属性]）。当您计划将应用程序部署到CloudHub或Mule运行时服务器时，这是推荐的方法。但是，如果您处于开发阶段并只是想加快此过程，则可以将连接凭证硬编码到下面显示的全局元素属性中。

image:marketo-config-global.png[marketo全球配置]

在测试或运行使用Marketo连接器的项目之前，请将以下内容添加到您的项目中：

在**.properties**文件中* 您的Marketo凭证和终端，并使用**Property Placeholder**组件加载它们。
* 入站端点到您的流程中。对于例如**HTTP**。
*  *Transform Message*组件。
* 变压器，例如**Object to json**。


[[config-global]]
== 使用连接器

[NOTE]
查看任何版本的连接器https://mulesoft.github.io/mule-marketo-connector/[here]的完整操作列表。

=== 名称空间和架构

在Studio中设计应用程序时，将连接器从调色板拖放到Anypoint Studio画布上的操作应自动使用连接器*namespace*和*schema location*填充XML代码。

[TIP]
如果您在Studio的XML编辑器或其他文本编辑器中手动编写Mule应用程序，请将这些粘贴到标签内*Configuration XML*的标题中。

*Namespace:* `http://www.mulesoft.org/schema/mule/marketo`

*Schema Location:*
`http://www.mulesoft.org/schema/mule/marketo/current/mule-marketo.xsd`


[[limitations]]
===  Marketo API限制

* 只能访问静态列表。智能列表无法通过API访问
*  Marketo有每日请求限制。您可以在*Sandbox*> *Admin*> *Web Services*中查看此限制

[[crm]]
===  CRM集成限制

启用本地CRM集成的实例将包含Marketo禁用的*Company*，*Opportunity*和*Sales Persons* API。因此，虽然操作可供选择，但Marketo的API会响应一个指定它们不能使用的错误。如果您不确定自己在自己的环境中的可用性，请使用MarketOut连接器的全局配置中的*Test Connectivity*按钮。

[[invoke]]
=== 调用操作

为了调用简单的操作（例如**Leads | Create Or Update**操作），您可以按照以下步骤操作：

. 在调色板中，将*Marketo connector*拖放到您的流程中，将它放在*Transform Message*和*Object to JSON Transformer*之间。
. 通过选择您在上一节中创建的*Connector Configuration*并选择要调用的操作来配置连接器。
. 现在，点击*Transform Message*。通过Datasense的灵活性，您将看到一个可用的潜在客户领域列表，供您的Marketo实例使用。

+

image:mk_datasense.png[“Marketo连接器”]

[source,code,linenums]
----
%dw 1.0
%output application/java
---
[{
	company: "ACME",
	billingCity: "Texas",
	website: "123boom.com",
	industry: "Explosives"
}]
----


完整的示例流程包含在这里供您参考。

image:marketo-create-leads-flow.png[完整的示例流程]

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:metadata="http://www.mulesoft.org/schema/mule/metadata" xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:marketo="http://www.mulesoft.org/schema/mule/marketo" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/marketo http://www.mulesoft.org/schema/mule/marketo/current/mule-marketo.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd">
    <marketo:config name="Marketo__Configuration" clientId="${clientId}" clientSecret="${clientSecret}" restEndpointUrl="${restEndpointUrl}" doc:name="Marketo: Configuration"/>
    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration"/>

<flow name="Create-Lead-Flow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
[{
	company: "ACME",
	billingCity: "Texas",
	website: "123boom.com",
	industry: "Explosives"
}]]]></dw:set-payload>
        </dw:transform-message>
        <marketo:create-or-update-lead config-ref="Marketo__Configuration" doc:name="Create Lead"/>
        <json:object-to-json-transformer doc:name="Object to JSON"/>
    </flow>
    </mule>
----

=== 在Mavenized Mule应用程序中使用连接器

如果您正在编写Mavenized Mule应用程序，则此XML片段必须包含在您的`pom.xml`文件中。

[source,xml,linenums]
----
<dependency>
	<groupId>org.mule.modules</groupId>
  <artifactId>mule-module-marketo</artifactId>
  <version>2.0.0</version>
</dependency>
----

在`<version>`标签内，为最新版本提供所需的版本号，单词`RELEASE`，或者为最新版本提供`SNAPSHOT`。迄今为止的可用版本是：

*  *2.0.0*
*  *1.2.5*


[[demo]]
演示应用程序。== 

您可以使用https://mulesoft.github.io/mule-marketo-connector/ [此链接]中的Marketo连接器下载功能完整的演示应用程序。

[[see-also]]
== 另请参阅

* 有关Marketo连接器的其他技术信息，请访问我们的lhttps：//mulesoft.github.io/mule-marketo-connector/ [技术参考文档]。您可能还需要访问MuleSoft的专家支持团队，该团队需要Mule Runtime Enterprise订阅并登录MuleSoft的客户门户。
* 有关Marketo API的更多信息，请访问 link:http://developers.marketo.com/documentation/getting-started/[Marketo API文档页面]。
